# quant-met

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  check_version.sh  environment.yml  input.yaml  justfile  plot_BCS_bandstructure.ipynb  plot_BCS_graphene.ipynb  plot_gaps.ipynb  plot_nonint_bandstructure.ipynb  plot_refactor_graphene_test.ipynb  pyproject.old.toml  pyproject.toml  superfluid_weight.ipynb  superfluid_weight_test.ipynb  test.py  tox.ini
.codspeed/: results_1736367929555.json  results_1745265339442.json
.github/workflows/: check_version.yml  codspeed.yml  integration_tests.yml  linting.yml  publish.yml  test.yml  typing.yml  unit_tests.yml
.reuse/: dep5
Laras code/: aux_funx.py  three_orb_DMFT.py
changelog.d/: 20240507_164919_tjarksievers_package_build.rst  20240508_120211_tjarksievers_work_on_bcs_code.rst  20240508_180412_tjarksievers_work_on_bcs_code.rst  20240510_150020_tjarksievers_bcs_plotting_methods.rst  20240510_150055_tjarksievers_bcs_plotting_methods.rst  20240510_150612_tjarksievers_bcs_plotting_methods.rst  20240513_131956_tjarksievers_change_bandpath.rst  20240520_124140_tjarksievers_compare_with_graphene_bcs.rst  20240520_124229_tjarksievers_compare_with_graphene_bcs.rst  20240608_200411_tjarksievers_implement_sympy.rst  20240611_163104_tjarksievers_resolve_overflow_errors.rst  20240611_164544_tjarksievers_resolve_overflow_errors.rst  20240612_130206_tjarksievers_save_results.rst  20240613_120937_tjarksievers_test_concrete_matrices.rst  20240701_172227_tjarksievers_implement_superfluid_weight.rst  20240701_172315_tjarksievers_implement_superfluid_weight.rst  20240702_124833_tjarksievers_implement_quantum_metric.rst  20240704_081634_tjarksievers_implement_quantum_metric.rst  20240704_184958_tjarksievers_implement_complex_gap.rst  20240704_190302_tjarksievers_superfluid_weight_as_matrix.rst  20240709_132527_tjarksievers_quantum_metric_bdg.rst  20240710_112950_tjarksievers_speedup.rst  20240827_102323_tjarksievers_correct_quantum_metric_and_sf_weight.rst  20240828_151401_tjarksievers_some_reorganisation.rst  20240828_151654_tjarksievers_some_reorganisation.rst  20240828_151725_tjarksievers_some_reorganisation.rst  20240923_150733_tjarksievers_various_fixes.rst  20240924_161133_tjarksievers_self_consistent_gap.rst  20241007_115255_tjarksievers_finite_temperature.rst  20241011_105807_tjarksievers_calculate_DOS.rst  20241011_142710_tjarksievers_self_consistency_complex_gap.rst  20241015_103236_tjarksievers_fix_quantum_metric.rst  20241018_085958_tjarksievers_finite_momentum.rst  20241018_101652_tjarksievers_fix_lattice_in_self_consistency.rst  20241018_101841_tjarksievers_fix_lattice_in_self_consistency.rst  20241018_102326_tjarksievers_fix_lattice_in_self_consistency.rst  20241018_115108_tjarksievers_implement_gap_from_dos.rst  20241021_184631_tjarksievers_missing_changelog.rst  20241022_141434_tjarksievers_add_finite_q_into_scf_cli.rst  20241024_094801_tjarksievers_save_beta_into_file.rst  (+37 more)
docs/: Makefile  requirements.txt
docs/api/: src.quant_met.bcs.rst  src.quant_met.configuration.rst  src.quant_met.plotting.rst  src.quant_met.rst
docs/source/: api.rst  conf.py  development.rst  example_input.yaml  example_input_T_C.yaml  example_input_T_C_one_band.yaml  example_input_dmft.yaml  example_input_scf.yaml  example_input_scf_obh.yaml  examples.rst  index.rst  user_guide.rst
docs/source/_static/: custom.css
docs/source/_templates/: sidebar-nav-bs.html
docs/source/api/: quant_met.bcs.find_fixpoint.rst  quant_met.bcs.gap_equation.rst  quant_met.bcs.rst  quant_met.cli.rst  quant_met.configuration.rst  quant_met.hamiltonians.rst  quant_met.plotting.rst  quant_met.rst  quant_met.utils.rst  src.quant_met.bcs.find_fixpoint.rst  src.quant_met.bcs.gap_equation.rst  src.quant_met.cli.rst  src.quant_met.hamiltonians.rst  src.rst
docs/source/examples/: band_structures.ipynb  dec-graphene.HSX  example-T_C.yaml  (+20 more)
include/: quant_met.h
notebooks/: analyse_bloch_functions.ipynb  bdg_egx.ipynb  bdg_graphene.ipynb  free_energy.ipynb  free_energy_minimization.ipynb  plot_BCS_bandstructure.ipynb  plot_nonint_bandstructure.ipynb  plot_refactor_graphene_test.ipynb  test.ipynb  test_sympy.ipynb
quant_met/: __init__.py  geometries.py  quant_met_core.pyi
src/: bindings.cpp  main.cpp
src/quant_met/: __init__.py  cli.py  configuration.py  hamiltonians.py  minimize_free_energy.py  utils.py
test/: test.hdf5  test_critical_temperatures.hdf5  test_hamiltonian.hdf5  test_q.hdf5  test_sample_hamiltonian.hdf5
tests/: __init__.py  benchmarks.py  no_test_cli.py  test_bdg.py  test_benchmarks.py  test_cli.py  test_crit_temp.py  test_free_energy.py  test_geometry.py  test_hamiltonians.py  test_hello_world.py  test_plotting.py  test_quantum_metric.py  test_scf.py  test_search_crit_temp.py  test_self_consistency.py  test_superfluid_weight.py  test_utils.py
tests/test_benchmarks/: test_current.py  test_free_energy.py  test_gap_equation.py  test_superfluid_weight.py
tests/test_free_energy/: test_free_energy.npz
tests/test_hamiltonians/: __init__.py  test_base_class.py  test_bdg_hamiltonian_derivative_graphene.npz  test_density_of_states.npz  test_fixed_values.py  test_hamiltonian_derivative_graphene.npz  test_hamiltonian_derivative_one_band.npz  test_invalid_values.py  test_random_samples.py  test_regressions.py  test_save.py  test_spectral_gap.npz
tests/test_integration/: __init__.py  test_crit_temp.py  test_scf.py
tests/test_numerics/: test_free_energy.npz
tests/test_quantum_metric/: test_quantum_metric_bdg_dressed_graphene.npz  test_quantum_metric_bdg_egx.npz  test_quantum_metric_bdg_graphene.npz  test_quantum_metric_dressed_graphene.npz  test_quantum_metric_egx.npz  test_quantum_metric_graphene.npz
tests/test_superfluid_weight/: test_superfluid_weight_dressed_graphene.npz  test_superfluid_weight_egx.npz  test_superfluid_weight_graphene.npz
(+96 files in other folders)
