[project]
name = "quant-met"
dynamic = ["version"]
description = "High-performance C++ backend for flat-band BCS simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.expand-macos-universal-tags = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[dependency-groups]
lint = [
    "ruff>=0.15.16",
]
type = [
    "ty>=0.0.44",
]
